# kaliatech-pather

./: .gitignore  CMakeLists.txt  README.md
kaliatech-pather-app-console/: CMakeLists.txt
kaliatech-pather-app-console/src/: KaliatechPatherAppConsole.cpp
kaliatech-pather-app-gui/: CMakeLists.txt
kaliatech-pather-app-gui/assets/: test-map-1.json
kaliatech-pather-app-gui/src/: KaliatechPatherAppGui.cpp  KpathApp.cpp
kaliatech-pather-lib/: CMakeLists.txt
kaliatech-pather-lib-tests/: CMakeLists.txt
kaliatech-pather-lib-tests/assets/: test-map-1.json
kaliatech-pather-lib-tests/src/: MapFileUtilsTest.h  PathTest.h  TestSuiteRunner.cpp
kaliatech-pather-lib/include/kaliatech-pather-lib/: Map.h  MapFileUtils.h  Obstacle.h  Path.h  PathFinder.h  PathSequence.h  Point.h  Seeker.h  Target.h  Types.h
kaliatech-pather-lib/include/kaliatech-pather-lib/utils/: Circle.h  ExternalBitTangets.h  InternalBitTangets.h  LineUtils.h
kaliatech-pather-lib/src/: Map.cpp  MapFileUtils.cpp  Obstacle.cpp  Path.cpp  PathFinder.cpp  PathSequence.cpp  Point.cpp  Seeker.cpp  Target.cpp
kaliatech-pather-lib/src/utils/: Circle.cpp  ExternalBitTangets.cpp  InternalBitTangets.cpp  LineUtils.cpp
